# I-was-reincarnated-as-a-ball

./: Cargo.toml  Readme.md  devenv.nix  devenv.yaml  rust-toolchain.toml
.cargo/: config.toml
assets/: bevy_logo.aseprite  boy_ball.aseprite  character_controller.aseprite  dog_ball.aseprite  enemy_ghost.aseprite  enemy_green_blob.aseprite  enemy_red_blob.aseprite  enemy_snake.aseprite  fade_in_out.aseprite  floor.aseprite  floor2.aseprite  main_menu_selection.aseprite  princess_ball.aseprite  selection_cursor.aseprite  test.aseprite  tree.aseprite  walls.aseprite  world_tileset.aseprite  world_tileset_split.aseprite
examples/: affine.rs  ball_behavior.rs  level_1.rs  physics.rs  repeated_sprite.rs  spawn_level.rs  text.rs
nix_files/: agb-gbafix.nix
src/: ball_type.rs  base.rs  fade_transition.rs  game_state.rs  level.rs  lib.rs  main.rs  physic.rs  render.rs  sound_loader.rs  sound_manager.rs  sprite_loader.rs  text.rs  utils.rs
src/game_state/: game_state_credit.rs  game_state_game_init.rs  game_state_in_game.rs  game_state_main_menu.rs  game_state_splash_screen.rs
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.ts  style.css
